--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -32,7 +32,7 @@
                     <!--serviceImplementation="com.jetbrains.crucible.connection.CrucibleManager" />-->
     <!--<diff.DiffTool implementation="com.jetbrains.crucible.ui.toolWindow.diff.CommentsDiffTool"/>-->
 
-      <toolWindow id="Redmine Integration" anchor="bottom" canCloseContents="true" factoryClass="com.defrag.RedmineWindowFactory"/>
+      <toolWindow id="Redmine Integration" anchor="bottom" canCloseContents="true" factoryClass="com.defrag.redmineplugin.view.RedmineWindowFactory"/>
   </extensions>
 
 
