Поправил функционал изменения задачи, рефакторинг

--- a/resources/curl.properties
+++ b/resources/curl.properties
@@ -1,6 +1,6 @@
-curl.get=curl -X GET %s/issues/%d
-curl.get.remaining.hours=grep -Po '(?<=hours[)]<\\/th><td>)\\d+[.]\\d+'
+curl.get=curl -X GET --cookie '%s' --header 'X-CSRF-Token:%s' %s/issues/%d
+curl.get.remaining.hours=grep -Po '(?<=hours[)]</th><td>)\\d+[.]\\d+'
 
-curl.post=curl -X POST --cookie '%s' --header 'X-CSRF-Token:%s' -d '_method=patch&%s' %s/issues/%d"
-curl.post.remaining.hours=remaining_hours=%d
+curl.post=curl -X POST --cookie '%s' --header 'X-CSRF-Token:%s' -d '_method=patch&%s' %s/issues/%d
+curl.post.remaining.hours=remaining_hours=%.1f
 curl.post.comment=issue[notes]=%s
