Поправил заголовок о предстоящей работе в зависимости от сегодняшнего дня

--- a/resources/report.properties
+++ b/resources/report.properties
@@ -41,6 +41,11 @@ report.tomorrow=<p><span style="font-size:16px; font-family:Calibri,Helvetica,sa
 &quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,NotoColorEmoji,&quot;Segoe UI Symbol&quot;,&quot;Android \
 Emoji&quot;,EmojiSymbols"><b>На завтра: </b>%s</span></p>
 
+report.tomorrow.friday=<p><span style="font-size:16px; font-family:Calibri,Helvetica,sans-serif,EmojiFont,&quot;Apple Color Emoji&quot;\
+,&quot;Segoe UI Emoji&quot;,NotoColorEmoji,&quot;Segoe UI Symbol&quot;,&quot;Android Emoji&quot;,EmojiSymbols,EmojiFont,\
+&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,NotoColorEmoji,&quot;Segoe UI Symbol&quot;,&quot;Android \
+Emoji&quot;,EmojiSymbols"><b>В понедельник: </b>%s</span></p>
+
 report.questions=<p><span style="font-size:16px; font-family:Calibri,Helvetica,sans-serif,EmojiFont,&quot;Apple Color Emoji&quot;\
 ,&quot;Segoe UI Emoji&quot;,NotoColorEmoji,&quot;Segoe UI Symbol&quot;,&quot;Android Emoji&quot;,EmojiSymbols,EmojiFont,\
 &quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,NotoColorEmoji,&quot;Segoe UI Symbol&quot;,&quot;Android \
